--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Home/Index.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Home/Index.cshtml
@@ -2,4 +2,26 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Hello, MVC!</h2>
+<h2>Index</h2>
+<core-app>
+    <div>
+        <p><img src="~/images/gif/ajax-loader.gif" /> Please wait ...</p>
+    </div>
+</core-app> 
+
+@section Scripts {
+    <script>
+
+    System.config({
+        packages: {
+            'app': {
+                defaultExtension: 'js'
+            }
+        },
+    });
+    System.import('app/main').then(null, console.error.bind(console));
+    </script> 
+}
+
+ 
+
