--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Shared/_Layout.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>  
+<head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <script src="~/lib-npm/es6-shim/es6-shim.js"></script>
@@ -8,9 +8,51 @@
     <script src="~/lib-npm/systemjs/system.src.js"></script>
     <script src="~/lib-npm/rxjs/Rx.js"></script>
     <script src="~/lib-npm/angular2/angular2.js"></script>
-</head>  
-  
-<body>  
-    <div> @RenderBody() </div> @RenderSection("scripts", required: false) </body>  
-  
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+</head>
+
+<body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Demo</a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container body-content">
+        <div>
+            @RenderBody()
+        </div> @RenderSection("scripts", required: false)
+        <hr />
+        <footer>
+            <p>&copy; 2016 - Angular2.Mvc</p>
+        </footer>
+    </div>
+    @section Scripts {
+        <script>
+    System.config({
+        packages: {
+            'app': {
+                defaultExtension: 'js'
+            }
+        },
+    });
+    System.import('app/main').then(null, console.error.bind(console));
+        </script>
+    }
+</body>
+
 </html>
