--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/Customer/Index.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/Customer/Index.cshtml
@@ -13,7 +13,7 @@
     <script>
         System.config({
             map: {
-                app: '/app'
+                app: '/scripts/dev/app'
             },
             packages: {
                 'app': {
