--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Home/Index.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     <script>
         System.config({
             map: {
-                app: 'scripts/dev/app'
+                app: 'app'
             },
             packages: {
                 'app': {
