--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Shared/_Layout.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <base href="/">
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <script src="~/lib-npm/es6-shim/es6-shim.js"></script>
@@ -8,6 +9,7 @@
     <script src="~/lib-npm/systemjs/system.src.js"></script>
     <script src="~/lib-npm/rxjs/Rx.js"></script>
     <script src="~/lib-npm/angular2/angular2.js"></script>
+    <script src="~/lib-npm/angular2/router.dev.js"></script>
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
 </head>
 
