--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/Customer/Edit.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/Customer/Edit.cshtml
@@ -2,13 +2,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Edit</h2>
 <hr />
-<customer-app>
+<customer-edit>
     <div>
         <p><img src="~/images/gif/ajax-loader.gif" /> Please wait ...</p>
     </div>
-</customer-app>
+</customer-edit>
 
 @section Scripts {
     <script>
@@ -22,7 +22,7 @@
                 }
             },
         });
-        System.import('app/Basic/Customer/customer.main').then(null, console.error.bind(console));
+        System.import('app/Basic/Customer/customer.edit.main').then(null, console.error.bind(console));
     </script>
 }
 
