Add sweetalert2 typing definition.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Shared/_Layout.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Shared/_Layout.cshtml
@@ -10,7 +10,9 @@
     <script src="~/lib-npm/rxjs/Rx.js"></script>
     <script src="~/lib-npm/angular2/angular2.js"></script>
     <script src="~/lib-npm/angular2/router.dev.js"></script>
+    <script src="~/lib-npm/sweetalert2/sweetalert2.js"></script>
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/lib-npm/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
 </head>
 
 <body>
