--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Customer/customer.edit.component.html
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Customer/customer.edit.component.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="form-group">
-        <input type="button" class="btn btn-success" value="Save" />
-        <input type="button" class="btn btn-default" value="Back" (click)="BackToList()" />
+        <input type="button" class="btn btn-success" value="Save" (click)="save()"/>
+        <input type="button" class="btn btn-default" value="Back" (click)="backToList()" />
     </div>
 </div>
