Complete the create page.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Customer/customer.index.component.html
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Customer/customer.index.component.html
@@ -1,4 +1,9 @@
-﻿<div>
+﻿
+<div>
+    <input type="button" class="btn btn-primary" value="Create New" (click)="goToCreate()"/>
+</div>
+<br />
+<div>
     <table class="table table-bordered table-hover" [hidden]="selectedCustomer">
         <thead>
             <tr>
