Complete updating to ng2 2.1.0.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Shared/_Layout.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Shared/_Layout.cshtml
@@ -10,6 +10,9 @@
     <script src="~/lib-npm/es6-shim/es6-shim.js"></script>
     <script src="~/lib-npm/systemjs/system.src.js"></script>
     <script src="~/app/systemjs.config.js"></script>
+
+    <script src="~/lib-npm/sweetalert2/sweetalert2.min.js"></script>
+    <link href="~/lib-npm/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
 </head>
