Update the system.import content in index page.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/Customer/Index.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/Customer/Index.cshtml
@@ -17,12 +17,10 @@
                 app: 'app/Basic/Customer'
             },
             packages: {
-                app: {
-                    defaultExtension: 'js'
-                }
+                app: {main:'customer.main.js',defaultExtension: 'js'}
             }
         });
-        System.import('app/customer.main.js').then(null, console.error.bind(console));
+        System.import('app/customer.main').then(null, console.error.bind(console));
     </script>
 }
 
