--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Home/Index.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Home/Index.cshtml
@@ -16,10 +16,7 @@
                 app: 'app'
             },
             packages: {
-                app: {
-                    main: 'main',
-                    defaultExtension: 'js'
-                }
+                app: {main: 'main.js',defaultExtension: 'js'}
             },
         });
         System.import('app/main').then(null, console.error.bind(console));
