--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Shared/_Layout.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Shared/_Layout.cshtml
@@ -4,6 +4,8 @@
     <base href="/">
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+
+
     <script src="~/lib-npm/reflect-metadata/Reflect.js"></script>
     <script src="~/lib-npm/zone.js/zone.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -11,10 +13,14 @@
     <script src="~/lib-npm/systemjs/system.src.js"></script>
     <script src="~/app/systemjs.config.js"></script>
 
+    
+    @*<jl-javascript-logger-definitions />*@
+    <script src="~/lib-npm/jsnlog/jsnlog.min.js"></script>
     <script src="~/lib-npm/sweetalert2/sweetalert2.min.js"></script>
     <link href="~/lib-npm/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+
 </head>
 
 <body>
@@ -46,6 +52,9 @@
             <p>&copy; 2016 - Angular2.Mvc</p>
         </footer>
     </div>
+
+
+    
 </body>
 
 </html>
