Complete the child router.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Product/product-index.component.html
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Product/product-index.component.html
@@ -3,11 +3,11 @@
         <p><img src="~/images/gif/ajax-loader.gif" /> Please wait ...</p>
     </div>
 </product-index>-->
-<br /><br /><br />
-<div class="btn-group" role="group" aria-label="Basic example">
-    <button type="button" class="btn btn-secondary">Books</button>
+
+<!--<div class="btn-group" role="group" aria-label="Basic example">
+    <button type="button" class="btn btn-secondary" (click)="goToBooks()">Books</button>
     <button type="button" class="btn btn-secondary">Toys</button>
     <button type="button" class="btn btn-secondary">Music</button>
-</div>
+</div>-->
 
-<!--<router-outlet></router-outlet>-->
+<product-sub></product-sub>
