--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Shared/_Layout.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <script src="~/lib-npm/zone.js/zone.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib-npm/es6-shim/es6-shim.js"></script>
+    @*<script src="~/lib-npm/traceur/traceur.js"></script>*@
     <script src="~/lib-npm/systemjs/system.src.js"></script>
     <script src="~/app/systemjs.config.js"></script>
 
