--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Product/product-create.component.html
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Product/product-create.component.html
@@ -1,1 +1,19 @@
-﻿<h2>{{title}}</h2>
+﻿<div class="form-horizontal">
+    <div class="form-group">
+        <label class="control-label  col-md-2">Title</label>
+        <div class="col-md-3">
+            <input [(ngModel)]="prod.Title" class="form-control" />
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label  col-md-2">Price</label>
+        <div class="col-md-3">
+            <input [(ngModel)]="prod.Price" class="form-control" />
+        </div>
+    </div>
+    
+    <div class="form-group">
+        <input type="button" class="btn btn-success" value="Save" (click)="save()" />
+        <input type="button" class="btn btn-default" value="Cancel" (click)="backToList()" />
+    </div>
+</div>
