--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Product/product-create.component.html
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Product/product-create.component.html
@@ -1,5 +1,13 @@
 ﻿<div class="form-horizontal">
     <div class="form-group">
+        <label class="control-label  col-md-2">Type</label>
+        <div class="col-md-3">
+            <select class="form-control" [(ngModel)]="selectedProdType" (ngModelChange)="changeSelectedType($event)">
+                <option *ngFor="let type of prodTypes" [ngValue]="type">{{type.name}}</option>
+            </select>
+        </div>
+    </div>
+    <div class="form-group">
         <label class="control-label  col-md-2">Title</label>
         <div class="col-md-3">
             <input [(ngModel)]="prod.Title" class="form-control" />
