Add the update function for product.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Product/product-index.component.html
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Product/product-index.component.html
@@ -10,9 +10,13 @@
     <button type="button" class="btn btn-secondary">Music</button>
 </div>-->
 
-<div>
-    <input type="button" value="Create" class="btn btn-info" (click)="goToCreate()" />
-</div>
+<table>
+    <tr>
+        <td>
+            <input type="button" value="Create" class="btn btn-info" (click)="goToCreate()" />
+        </td>
+    </tr>
+</table>
 
 <hr />
 
