Complete the update sample for firebase.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Product/product-music.component.html
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Product/product-music.component.html
@@ -6,12 +6,18 @@
                 <th class="text-center">ID</th>
                 <th class="text-center">Title</th>
                 <th class="text-center">Price</th>
+                <th></th>
             </tr>
         </thead>
         <tr *ngFor="let prod of music">
             <td>{{prod.Id}}</td>
             <td>{{prod.Title}}</td>
             <td>{{prod.Price}}</td>
+            <td>
+                <input type="button" value="Edit" class="btn btn-info" (click)="edit(prod)" />
+                &nbsp;
+                <input type="button" value="Remove" class="btn btn-danger" (click)="remove(prod)" />
+            </td>
         </tr>
     </table>
 </div>
