Start work out on firebase authentication.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/Customer/Index.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/Customer/Index.cshtml
@@ -6,7 +6,7 @@
 <hr />
 <customer-app>
     <div>
-        <p><img src="~/images/gif/ajax-loader.gif" /> Please wait ...</p>
+        <p><img src="~/asset/images/gif/ajax-loader.gif" /> Please wait ...</p>
     </div>
 </customer-app>
 
