--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/Product/Index.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/Product/Index.cshtml
@@ -5,7 +5,7 @@
 
 <product-app>
     <div>
-        <p><img src="~/images/gif/ajax-loader.gif" /> Please wait ...</p>
+        <p><img src="~/asset/images/gif/ajax-loader.gif" /> Please wait ...</p>
     </div>
 </product-app>
 
