--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Home/Index.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Home/Index.cshtml
@@ -2,10 +2,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
 <core-app>
     <div>
-        <p><img src="~/images/gif/ajax-loader.gif" /> Please wait ...</p>
+        <p><img src="~/asset/images/gif/ajax-loader.gif" /> Please wait ...</p>
     </div>
 </core-app>
 
