--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Product/product-create.component.html
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Product/product-create.component.html
@@ -10,7 +10,7 @@
     <div class="form-group">
         <label class="control-label  col-md-2">Title</label>
         <div class="col-md-3">
-            <input [(ngModel)]="prod.Title" class="form-control" />
+            <input [(ngModel)]="prod.Title" class="form-control"  [placeholder]="prodHint"/>
         </div>
     </div>
     <div class="form-group">
