--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Product/product-edit.component.html
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Product/product-edit.component.html
@@ -1,27 +1,1 @@
-﻿<div class="form-horizontal">
-    <div class="form-group">
-        <label class="control-label  col-md-2">Type</label>
-        <div class="col-md-3">
-            <select class="form-control" [(ngModel)]="selectedProdType" (ngModelChange)="changeSelectedType($event)">
-                <option *ngFor="let type of prodTypes" [ngValue]="type">{{type.name}}</option>
-            </select>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label  col-md-2">Title</label>
-        <div class="col-md-3">
-            <input [(ngModel)]="prod.Title" class="form-control" />
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label  col-md-2">Price</label>
-        <div class="col-md-3">
-            <input [(ngModel)]="prod.Price" class="form-control" />
-        </div>
-    </div>
-
-    <div class="form-group">
-        <input type="button" class="btn btn-success" value="Save" (click)="save()" />
-        <input type="button" class="btn btn-default" value="Cancel" (click)="backToList()" />
-    </div>
-</div>
+﻿<h2>{{title}}</h2>
