Refactoring the file name and architecture.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/CustomerMvc/Create.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/CustomerMvc/Create.cshtml
@@ -16,13 +16,13 @@
     <script>
         System.config({
             map: {
-                app: 'app/Basic/CustomerMvc/create'
+                app: 'app/Basic/CustomerMvc'
             },
             packages: {
-                app: { main: 'customermvc-create.main.js', defaultExtension: 'js' }
+                app: { main: 'create.main.js', defaultExtension: 'js' }
             }
         });
-        System.import('app/customermvc-create.main').then(null, console.error.bind(console));
+        System.import('app/create.main').then(null, console.error.bind(console));
     </script>
 }
 
