--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/CustomerDynamic/list.component.html
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/CustomerDynamic/list.component.html
@@ -1,3 +1,29 @@
-﻿This is a test page
-<input type="button" class="btn btn-default" value="Click" (click)="showMsg()" />
- 
+﻿
+<div>
+    <div>
+        <table class="table table-bordered table-hover">
+            <thead>
+                <tr>
+                    <td>ID</td>
+                    <td class="text-center">Name</td>
+                    <td class="text-center">Phone</td>
+                    <td class="text-center">Age</td>
+                    <td class="text-center">Description</td>
+                    <td></td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of customers; let sn=index">
+                    <!--<td class="col-sm-1 text-center">{{sn+1}}</td>-->
+                    <td class="col-sm-1 text-center">{{item.Id}}</td>
+                    <td class="col-sm-2">
+                        <a [innerHtml]="item.Name" (click)="showDetail(item)"></a>
+                    </td>
+                    <td class="col-sm-2">{{item.Phone}}</td>
+                    <td class="col-sm-1">{{item.Age}}</td>
+                    <td class="col-sm-3">{{item.Description}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
