--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Customer/customer-index.component.html
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/Basic/Customer/customer-index.component.html
@@ -23,6 +23,7 @@
                     <td class="text-center">Name</td>
                     <td class="text-center">Phone</td>
                     <td class="text-center">Age</td>
+                    <td class="text-center">Description</td>
                     <td></td>
                 </tr>
             </thead>
@@ -35,6 +36,7 @@
                     </td>
                     <td class="col-sm-2">{{item.Phone}}</td>
                     <td class="col-sm-1">{{item.Age}}</td>
+                    <td class="col-sm-2">{{item.Description}}</td>
                     <td class="col-sm-2">
                         <input type="button" class="btn btn-info" value="Edit" (click)="editCustomer(item)" />
                         &nbsp;
