--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/CustomerMvc/_CreateView.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/CustomerMvc/_CreateView.cshtml
@@ -1,5 +1,14 @@
 ﻿@model Angular2.Mvc.Core.Models.ViewModel.VmCustomer
 
+<table>
+    <tr>
+        <td>
+            <h3>@ViewBag.Title</h3>
+        </td>
+        <img id='tipImg' style='width: 30px; height: 30px;' src='https://watson-qa-demo.mybluemix.net/images/question-and-answer.svg' />
+        <td></td>
+    </tr>
+</table>
 
 @using (Html.BeginForm("Create", "CustomerMvc", FormMethod.Post, new { @id = "CreateForm", autocomplete = "off" }))
 {
