Complete the sample of mix ng2 component and render Mvc view,

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/CustomerMvc/Create.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/CustomerMvc/Create.cshtml
@@ -52,8 +52,8 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-success" /> &nbsp;
-                <input type="button" value="Back" onclick="location.href='@Url.Action("Index","Customer")'" class="btn btn-default" />
+                <input type="button" value="Save" (click)="submit()" class="btn btn-success" /> &nbsp;
+                <input type="button" value="Back" onclick="location.href='@Url.Action("Index","CustomerMvc")'" class="btn btn-default" />
             </div>
         </div>
     </div>
