--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/component/blockUI/blockUI.comp.css
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/component/blockUI/blockUI.comp.css
@@ -25,3 +25,18 @@
   font-weight: bold;
   filter: alpha(opacity=100);
 }
+
+.modal-backdrop.in {
+    filter: alpha(opacity=50);
+    opacity: .5;
+}
+
+.modal-backdrop {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1040;
+    background-color: #000;
+}
