Install font-awesome and apply fa-spin icon to blockUI component.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Shared/_Layout.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Shared/_Layout.cshtml
@@ -21,10 +21,8 @@
     <link href="~/lib-npm/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-
+    <link href="~/lib-npm/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="~/app/component/blockUI/blockUI.comp.css" rel="stylesheet" /><!--Must override bootstrap-->
-
-
 </head>
 
 <body>
