--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/component/Basic/Customer/customer-index.component.html
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/component/Basic/Customer/customer-index.component.html
@@ -12,7 +12,7 @@
 
     <hr />
     <div>
-        <input type="button" class="btn btn-primary" value="Create New" (click)="goToCreate()" />
+        <button class="btn btn-primary" (click)="goToCreate()"><i class="blue fa fa-edit"></i>Create</button>
     </div>
     <br />
     <div>
